[package]
name = "sesh"
version = "0.1.0"
edition = "2021"
authors = ["The Selene Team"]
description = "A shell."
license = "MIT"
repository = "https://github.com/letsbuilda/selene"
default-run = "sesh"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
selene-lang = { path = "../selene-lang" }
